@@ -1,3 +1,6 @@
+2012-03-27 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* add a url search field
+	* add a link for the url in each record
 2012-01-19 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* add a new module in web_info
 	* add a single view for each item
